# truss

./: .gitignore  .gitleaks.toml  .trufflehog-exclude  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml  deny.toml  flake.nix  justfile  mise.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml  rail.toml
.config/sccache/: config.toml
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.githooks/lib/: ai-attribution.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-hygiene.yml  secrets-scan.yml
.specify/: feature.json  init-options.json
.specify/memory/: constitution.md
crates/truss-cli/: Cargo.toml
crates/truss-cli/src/: main.rs  main.rs.rej
crates/truss-cli/templates/agent-rules/: AGENTS.md  CLAUDE.md  README.md
crates/truss-cli/templates/agent-rules/.githooks/: commit-msg
crates/truss-cli/templates/default/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  clippy.toml  deny.toml  flake.nix
crates/truss-cli/templates/default/.cargo/: config.toml
crates/truss-cli/templates/default/.config/: nextest.toml
crates/truss-cli/templates/default/crates/app/: Cargo.toml
crates/truss-cli/templates/monorepo/: Cargo.toml  layout.toml
crates/truss-cli/templates/nixdex/: AGENTS.md  CLAUDE.md  Cargo.toml  flake.nix  justfile
crates/truss-cli/templates/nixdex/crates/app/: Cargo.toml
crates/truss-cli/templates/nixdex/crates/app/src/: main.rs
crates/truss-cli/templates/spec-kit/: AGENTS.md  justfile
crates/truss-cli/templates/spec-kit/.specify/memory/: constitution.md
crates/truss-cli/templates/spec-kit/specs/: README.md
crates/truss-cli/tests/: cli.rs
crates/truss-core/: Cargo.toml
crates/truss-core/src/: auth.rs  error.rs  exclude.rs  extract.rs  git.rs  hooks.rs  layout.rs  lib.rs  marketplace.rs  pack_manifest.rs  pathsafe.rs  preset.rs  prompt.rs  protect.rs  registry.rs  sync.rs  template.rs  unify.rs  update.rs  workspace.rs
crates/truss-core/templates/: agent-rules  default  monorepo  nixdex  spec-kit
crates/truss-core/tests/: auth.rs  git_remote.rs  integration.rs  prompt.rs  registry_protect.rs  update.rs  workspace.rs
docs/: ARCHITECTURE.md  CLI.md  README.template.md  REGISTRY.md  TEMPLATES.md
scripts/: update_docs.py
specs/001-registry-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-registry-cli/checklists/: requirements.md
specs/001-registry-cli/contracts/: cli.md
specs/002-workspace-members/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-workspace-members/checklists/: requirements.md
specs/002-workspace-members/contracts/: cli.md
specs/003-multi-crate-layout/: plan.md  spec.md  tasks.md
specs/003-multi-crate-layout/checklists/: requirements.md
specs/004-git-remote-templates/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-git-remote-templates/checklists/: requirements.md
specs/005-template-defined-prompts/: spec.md
specs/005-template-defined-prompts/checklists/: requirements.md
specs/006-truss-update-3way-merge/: spec.md
specs/006-truss-update-3way-merge/checklists/: requirements.md
specs/007-private-git-auth/: spec.md
specs/007-private-git-auth/checklists/: requirements.md
specs/008-truss-extract/: spec.md
specs/008-truss-extract/checklists/: requirements.md
specs/009-generation-hooks/: spec.md
specs/009-generation-hooks/checklists/: requirements.md
specs/010-genignore-exclude/: spec.md
specs/010-genignore-exclude/checklists/: requirements.md
specs/011-dry-run-and-define/: spec.md
specs/011-dry-run-and-define/checklists/: requirements.md
specs/012-project-type-presets/: spec.md
specs/012-project-type-presets/checklists/: requirements.md
specs/013-json-described-packs/: spec.md
specs/013-json-described-packs/checklists/: requirements.md
specs/014-template-marketplace/: spec.md
specs/014-template-marketplace/checklists/: requirements.md
specs/015-workspace-dependency-unification/: spec.md
specs/015-workspace-dependency-unification/checklists/: requirements.md
specs/016-shell-completions/: spec.md
specs/016-shell-completions/checklists/: requirements.md
