[workspace]
resolver = "3"
members = ["crates/truss-core", "crates/truss-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["owner"]
license = "MIT"
repository = "https://github.com/owner/truss"
description = "Rust project scaffolder with template sync and local registries"
categories = ["development-tools"]
rust-version = "1.85.0"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minijinja = "2"
rust-embed = "8"
toml_edit = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
rustc-hash = "2"
ahash = { version = "0.8", features = ["serde"] }
directories = "5"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
color-eyre = "0.6"
tempfile = "3"
truss-core = { path = "crates/truss-core" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
get_unwrap = "deny"
indexing_slicing = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
manual_assert = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"

must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
manual_unwrap_or = "allow"
manual_unwrap_or_default = "allow"
missing_const_for_fn = "allow"
future_not_send = "allow"
significant_drop_tightening = "allow"
missing_transmute_annotations = "allow"
impl_trait_in_params = "allow"
redundant_pub_crate = "allow"
str_to_string = "allow"
fallible_impl_from = "allow"
unwrap_in_result = "allow"
single_match_else = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
shadow_unrelated = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
items_after_statements = "allow"
or_fun_call = "allow"
option_if_let_else = "allow"
map_unwrap_or = "allow"
borrow_as_ptr = "allow"
ref_as_ptr = "allow"
missing_assert_message = "allow"
mixed_read_write_in_expression = "allow"
disallowed_names = "allow"
multiple_crate_versions = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
