[package]
name = "truss-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core scaffolding library for truss"

[lib]
name = "truss_core"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
minijinja.workspace = true
rust-embed = { workspace = true, features = ["debug-embed", "interpolate-folder-path"] }
toml_edit = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true
ahash.workspace = true
directories.workspace = true
globset = "0.4.19"
regex = "1.13.1"
semver.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml_edit = { workspace = true, features = ["serde"] }

[lints]
workspace = true
