[workspace]
resolver = "3"
members = ["crates/app"]

[workspace.package]
version = "0.1.0"
edition = "{{ edition }}"
authors = ["{{ author }}"]
license = "{{ license }}"
{% if repository %}repository = "{{ repository }}"{% endif %}

[workspace.dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
get_unwrap = "deny"
indexing_slicing = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
